sort.baseball.BubbleBaseball.scala.error
Compilation error:
BubbleBaseball:44: error: not found: type Index
def min(base:Index):Int={
             ^BubbleBaseball:59: error: not found: type Index
def max(base:Index):Int={
             ^